syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";

package via.dk;

message Recipe {
  int32 id = 1;
  string name = 2;
  string type = 3;
  bool contains_allergen = 4;
  int32 calories = 5;
  google.protobuf.Timestamp creation_date = 6;
  google.protobuf.Timestamp modification_date = 7;
  string image_link = 8;
  repeated int32 ingredients_id = 9;
}


message CreateRecipeRequest {
  string name = 1;
  string image_link = 2;
  repeated int32 ingredients_id = 3;
}

message UpdateRecipeRequest {
  int32 id = 1;
  string name = 2;
  string image_link = 3;
  repeated int32 ingredients_id = 4;
}

message UpdateRecipeResponse {
  string status = 1;
}

message DeleteRecipeRequest {
  int32 id = 1;
}

message DeleteRecipeResponse {
  string status = 1;
}

message CreateRecipeResponse {
  string status = 1;
}

message RetrieveRecipeRequest {
  //this probably has to remain empty
}

message RetrieveRecipeResponse {
  repeated Recipe recipes = 1;
}

//create is absolute bullshit, needs more work
service RecipeService {
  rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse);
  rpc GetAllRecipes(RetrieveRecipeRequest) returns (RetrieveRecipeResponse);
  rpc UpdateRecipe(UpdateRecipeRequest) returns (UpdateRecipeResponse);
  rpc DeleteRecipe(DeleteRecipeRequest) returns (DeleteRecipeResponse);
}